# Anag_Stats

./: LICENSE  Makefile  README.md  pyproject.toml
anag_stats_/: experiment.html  experiment.js  stimuli.js  util.js
anag_stats_/Data review/: anagram_rating_pilot_filtered_20240808_1713.csv  anagram_statistics20240808_1719.csv  anagram_statistics20240809_1325.csv  anagram_statistics20240813_1448.csv  anagram_statistics20240819_1557.csv  making_longdf.ipynb  preliminary_qc copy.ipynb  preliminary_qc.ipynb  stimuli.json  subject_wise_qc.ipynb
anag_stats_/DataReview/: making_longdf.ipynb  qc_responses.csv  subject_wise_qc.ipynb
anag_stats_/Making Anagrams/: anagram_utils.py  group_1_word_pairs.csv  group_2_word_pairs.csv  group_3_word_pairs.csv  group_4_word_pairs.csv  making_anagrams.ipynb  making_anagrams_refactor.ipynb  possible_words.json  propernoun.py  stimuli.js  test_anagram_utils.py
anag_stats_/MakingAnagrams/: anagram_utils.py  cat_full_list.csv  making_anagrams_refactor.ipynb  new_file_maker.ipynb  propernoun.py  rand_full_list.js  rand_full_list.json  stimuli.js  test_anagram_utils.py  word_list_review.csv
docs/: README.md  SetC4.html  _quarto.yml  experiment.js  index.html  stimuli.js  styles.css  util.js
docs/SetA/: experiment.js
docs/SetA1/: experiment.js  stimuli.js  util.js
docs/SetB/: experiment.js  stimuli.js
docs/SetB1 /: stimuli.js  util.js
docs/SetB3/: index.html
docs/SetB4/: experiment.js
docs/SetC1/: experiment.js
docs/SetC2/experiment/: README.md
docs/SetC4/: experiment.js
docs/experiment/anagramer/: experiment.css
(+23 files in other folders)
