[project]
name = "anag-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.1",
    "spacy>=3.7.6",
    "ipykernel>=6.29.5",
    "pandas>=2.2.2",
    "numpy==1.26.4",
    "wordfreq>=3.1.1",
    "matplotlib>=3.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
